<resources>
    <string name="app_name">GPA_parupudid1_Calulator</string>
    <string name="course1">Course 1:</string>
    <string name="compute_gpa">Compute GPA</string>
    <string name="course2">Course 2:</string>
    <string name="course3">Course 3:</string>
    <string name="course4">Course 4:</string>
    <string name="course5">Course 5:</string>
    <string name="course_1_in">Enter grade for course 1</string>
    <string name="course_2_in">Enter grade for course 2</string>
    <string name="course_3_in">Enter grade for course 3</string>
    <string name="course_4_in">Enter grade for course 4</string>
    <string name="course_5_in">Enter grade for course 5</string>
    <string-array name="c1_autofill">
        <item>Enter grade for course 1</item>
    </string-array>
    <string-array name="c2_autofill">
        <item>Enter grade for course 2</item>
    </string-array>
    <string-array name="c3_autofill">
        <item>Enter grade for course3</item>
    </string-array>
    <string-array name="c4_autofill">
        <item>Enter grade for course 4</item>
    </string-array>
    <string-array name="c5_autofill">
        <item>Enter grade for course 5</item>
    </string-array>


</resources>
