<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course1"
        android:textStyle="bold"
        android:labelFor="@+id/grade1"
        android:textColor="#009688"
        />
    <EditText
        android:id="@+id/grade1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="numberDecimal"
        android:layout_below="@id/label1"
        android:autofillHints="@array/c1_autofill"
        android:padding="8dp"
        android:hint="Enter the grade"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/grade1"
        android:labelFor="@+id/grade2"
        android:text="@string/course2"
        android:textColor="#009688"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/grade2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="numberDecimal"
        android:layout_below="@id/label2"
        android:autofillHints="@array/c2_autofill"
        android:hint="Enter the grade"
        android:padding="8dp"

        tools:ignore="LabelFor" />
    <TextView
        android:id="@+id/label3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/grade2"
        android:text="@string/course3"
        android:textStyle="bold"
        android:textColor="#009688"
        android:labelFor="@+id/grade3" />
    <EditText
        android:id="@+id/grade3"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="numberDecimal"
        android:layout_below="@id/label3"
        android:autofillHints="@array/c3_autofill"
        android:hint="Enter the grade"
        android:padding="8dp"
        tools:ignore="LabelFor" />
    <TextView
        android:id="@+id/label4"
        android:layout_width="wrap_content"
        android:layout_below="@id/grade3"
        android:layout_height="wrap_content"
        android:text="@string/course4"
        android:textStyle="bold"
        android:textColor="#009688"
        android:labelFor="@+id/grade4" />
    <EditText
        android:id="@+id/grade4"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="numberDecimal"
        android:layout_below="@id/label4"
        android:autofillHints="@array/c4_autofill"
        android:hint="Enter the grade"
        android:padding="8dp"
        tools:ignore="LabelFor" />
    <TextView
        android:id="@+id/label5"
        android:layout_width="wrap_content"
        android:layout_below="@id/grade4"
        android:layout_height="wrap_content"
        android:text="@string/course5"
        android:textStyle="bold"
        android:textColor="#009688"
        android:labelFor="@+id/grade5" />

    <EditText
        android:id="@+id/grade5"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="numberDecimal"
        android:layout_below="@id/label5"
        android:autofillHints="@array/c5_autofill"
        android:hint="Enter the grade"
        android:padding="8dp"
        tools:ignore="LabelFor" />



    <Button
        android:id="@+id/computeButton"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/grade5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/compute_gpa"

        android:textStyle="bold"
        android:backgroundTint="#009688"/>

    <TextView
        android:id="@+id/gpaDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/computeButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:textSize="18sp" />

</RelativeLayout>
